# uuv_simulator

./: .cproject  .gitignore  .project  .travis.yml  3rd-party-licenses.txt  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  NOTICE  README.md  ros_lunar.rosinstall  tracks.yaml
src/uuv_assistants/: CMakeLists.txt  package.xml
src/uuv_assistants/launch/: message_to_tf.launch  publish_footprints.launch  publish_vehicle_footprint.launch
src/uuv_assistants/scripts/: publish_footprints.py
uuv_assistants/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_assistants/launch/: message_to_tf.launch  publish_body_sname.launch  publish_footprints.launch  publish_world_ned_frame.launch  set_simulation_timer.launch  unpause_simulation.launch
uuv_assistants/meshes/: propeller_1.stl
uuv_assistants/meshes/actuators/: fin.stl  propeller_0.stl
uuv_assistants/meshes/sensors/: dvl.blend
uuv_assistants/scripts/: create_new_robot_model  publish_footprints.py  publish_vehicle_footprint.py  publish_world_models.py  set_simulation_timer.py  unpause_simulation.py
uuv_assistants/src/: message_to_tf.cc
uuv_assistants/templates/robot_description/: actuators.xacro.jinja  base.xacro.jinja  gazebo.xacro.jinja  root.urdf.jinja  sensors.xacro.jinja  snippets.xacro  snippets.xacro.jinja
uuv_assistants/test/: test_templates.py
uuv_control/uuv_auv_control_allocator/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_control/uuv_auv_control_allocator/launch/: start_control_allocator.launch
uuv_control/uuv_auv_control_allocator/msg/: AUVCommand.msg
uuv_control/uuv_auv_control_allocator/scripts/: control_allocator
uuv_control/uuv_control_cascaded_pids/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_control/uuv_control_cascaded_pids/cfg/: AccelerationControl.cfg  PositionControl.cfg  VelocityControl.cfg
uuv_control/uuv_control_cascaded_pids/config/: joy_accel.yaml
uuv_control/uuv_control_cascaded_pids/launch/: joy_accel.launch  joy_velocity.launch  key_board_velocity.launch  position_hold.launch
uuv_control/uuv_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_control/uuv_control_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_control/uuv_thruster_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_control/uuv_trajectory_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_descriptions/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_descriptions/launch/: auv_underwater_world.launch  empty_underwater_world.launch  heightmap.launch  herkules_ship_wreck.launch  lake.launch  mangalia.launch  mangalia_manipulation.launch  message_to_tf.launch  munkholmen.launch  ocean_waves.launch  rov_bop_panel.launch  upload_rexrov.launch  upload_rexrov_default.launch  upload_rexrov_default_noisy_pose.launch  upload_rexrov_oberon4.launch  upload_rexrov_oberon7.launch  upload_rexrov_oberon_arms.launch
uuv_descriptions/models/: CMakeLists.txt
uuv_descriptions/robots/: rexrov_default.xacro  rexrov_default_noisy_pose.xacro  rexrov_oberon4.xacro  rexrov_oberon7.xacro  rexrov_oberon_arms.xacro  rexrov_sonar.xacro
uuv_descriptions/scripts/: CMakeLists.txt  spawn_model  spawn_model.py
uuv_descriptions/test/: test_urdf_files.py  test_urdf_files.test
uuv_descriptions/urdf/: common.urdf.xacro  rexrov_actuators.xacro  rexrov_base.xacro
uuv_descriptions/world_models/: CMakeLists.txt
uuv_descriptions/worlds/: CMakeLists.txt  empty_underwater.world  lake.world  mangalia.world  mangalia_manipulation.world  ocean_waves.world  subsea_bop_panel.world  underwater_heightmap.world
uuv_evaluation/: CMakeLists.txt  package.xml  setup.py
uuv_evaluation/bags/: README.md
uuv_evaluation/launch/: evaluate_trajectory.launch
uuv_evaluation/scripts/: clean_port_locks  create_smac_config_files  evaluate_smac_best_results.py  run_best_worst_comparison.py  run_smac  smac  smac_wrapper.py  trajectory_eval.py
uuv_evaluation/test/: example_mission.launch  example_start_ocean_world.launch  example_start_ocean_world.yaml  example_task.yaml  recording.bag  test_all.launch  test_evaluate_trajectory.py  test_kpis.py  test_run_task.py
uuv_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_gazebo/launch/: girona500.launch  multi_auv.launch  rexrov_bop_panel.launch  rexrov_default.launch  rexrov_default_logitech_joy.launch  rexrov_manipulation.launch  rexrov_oberon.launch  rexrov_oberon4_demo.launch  rexrov_oberon4_demo_logitech_joy.launch  rexrov_oberon_arms_demo.launch  rexrov_oberon_arms_demo_logitech_joy.launch  rexrov_oberon_demo.launch  rexrov_oberon_demo_logitech_joy.launch  rexrov_sonar.launch  rexrov_sonar_logitech_joy.launch
uuv_gazebo/rviz/: controller_demo.rviz  rexrov_default.rviz  rexrov_oberon.rviz  rexrov_oberon_jt_controller.rviz  rexrov_sonar.rviz  two_rexrovs_wind_farm.rviz
uuv_gazebo/worlds/: ocean_waves.world  underwater_heightmap.world
uuv_gazebo_plugins/uuv_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_gazebo_worlds/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_gazebo_worlds/launch/: auv_underwater_world.launch  empty_underwater_world.launch  herkules_ship_wreck.launch  lake.launch  mangalia.launch  mangalia_manipulation.launch  munkholmen.launch  ocean_waves.launch  rov_bop_panel.launch  subsea_bop_panel.launch
uuv_gazebo_worlds/worlds/: auv_underwater_world.world  empty_underwater.world  herkules_ship_wreck.world  mangalia_manipulation.world  munkholmen.world  underwater_heightmap.world
uuv_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_teleop/launch/: finned_uuv_teleop.launch  uuv_keyboard_teleop.launch  uuv_teleop.launch
uuv_teleop/scripts/: finned_uuv_teleop.py  vehicle_keyboard_teleop.py  vehicle_teleop.py
uuv_teleop/uuv_auv_teleop/: CMakeLists.txt  package.xml  setup.py
uuv_teleop/uuv_filtered_joy/: CMakeLists.txt  package.xml  setup.py
uuv_teleop/uuv_vehicle_teleop/: CMakeLists.txt  package.xml
(+2446 files in other folders)
