<?xml version="1.0"?>
<package>
  <name>uuv_evaluation</name>
  <version>0.0.0</version>
  <description>Python scripts and modules to generate plots and KPIs from recorded simulation ROS bags</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <build_depend>python-simplejson</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>uuv_trajectory_control</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-simplejson</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>uuv_trajectory_control</run_depend>
  
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
