<?xml version="1.0"?>
<package format="2">
  <name>uuv_simulator</name>
  <version>0.5.0</version>
  <description>uuv_simulator contains Gazebo plugins and ROS packages for modeling and simulating unmanned underwater vehicles</description>

  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>
  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="Sebastian.Scherer2@de.bosch.com">Sebastian Scherer</author>

  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>
  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="Sebastian.Scherer2@de.bosch.com">Sebastian Scherer</maintainer>

  <license>Apache-2.0</license>

  <url type="documentation">https://uuvsimulator.github.io/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
