<?xml version="1.0"?>
<package format="2">
  <name>uuv_simulator</name>
  <version>0.6.13</version>
  <description>uuv_simulator contains Gazebo plugins and ROS packages for modeling and simulating unmanned underwater vehicles</description>

  <author email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</author>
  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>

  <maintainer email="luizricardo.douat@de.bosch.com">Luiz Ricardo Douat</maintainer>
  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>

  <license>Apache-2.0</license>

  <url type="documentation">https://uuvsimulator.github.io/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_auv_control_allocator</exec_depend>
  <exec_depend>uuv_control_cascaded_pid</exec_depend>
  <exec_depend>uuv_control_msgs</exec_depend>
  <exec_depend>uuv_control_utils</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo</exec_depend>
  <exec_depend>uuv_gazebo_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_gazebo_worlds</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins_msgs</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>uuv_teleop</exec_depend>
  <exec_depend>uuv_world_plugins</exec_depend>
  <exec_depend>uuv_world_ros_plugins</exec_depend>
  <exec_depend>uuv_world_ros_plugins_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
