<?xml version="1.0"?>
<package format="1">
  <name>uuv_auv_control_allocator</name>
  <version>0.5.0</version>
  <description>Optimal allocation of forces and torques to thruster and fins of AUVs</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
