<?xml version="1.0"?>
<package format="2">
  <name>uuv_auv_control_allocator</name>
  <version>0.5.8</version>
  <description>Optimal allocation of forces and torques to thruster and fins of AUVs</description>

  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
